# xsdtools-svn

./: AUTHORS  INSTALL  Makefile.am  README  configure.ac
include/: complex.h  element.h  entity.h  schema.h
libxsd/: Makefile.am  schema.cpp  xml.cpp
xsd2hbm/: Makefile.am  convert.cpp
xsd2sql/: Makefile.am  convert.cpp
